--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -8,7 +8,7 @@
 
 
     <EditText
-        android:id="@+id/etName"
+        android:id="@+id/et_name"
         android:layout_width="match_parent"
         android:textSize="20dp"
         android:layout_marginTop="20dp"
@@ -19,7 +19,7 @@
 
 
     <EditText
-        android:id="@+id/etEmail"
+        android:id="@+id/et_email"
         android:layout_width="match_parent"
         android:textSize ="20dp"
         android:layout_marginTop="20dp"
@@ -29,7 +29,7 @@
 
 
     <EditText
-        android:id="@+id/etPassword"
+        android:id="@+id/et_password"
         android:layout_width="match_parent"
         android:textSize ="20dp"
         android:layout_marginTop="20dp"
@@ -38,7 +38,7 @@
         android:inputType="textPassword" />
 
     <EditText
-        android:id="@+id/etConfirmPassword"
+        android:id="@+id/et_confirmPassword"
         android:layout_width="match_parent"
         android:textSize ="20dp"
         android:layout_marginTop="20dp"
@@ -47,7 +47,7 @@
         android:inputType="textPassword" />
 
     <EditText
-        android:id="@+id/etMobileNumber"
+        android:id="@+id/et_mobileNo"
         android:layout_width="match_parent"
         android:textSize ="20dp"
         android:layout_marginTop="20dp"
