--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -7,18 +7,18 @@
         <item
             android:id="@+id/nav_camera"
 
-            android:title="@string/_import" />
+            android:title="@string/news_updates" />
         <item
             android:id="@+id/nav_gallery"
 
-            android:title="@string/gallery" />
+            android:title="@string/score" />
         <item
             android:id="@+id/nav_slideshow"
 
-            android:title="@string/slideshow" />
+            android:title="@string/account" />
         <item
             android:id="@+id/nav_manage"
 
-            android:title="@string/tools" />
+            android:title="@string/logout" />
     </group>
 </menu>
