--- a/app/src/main/res/layout/news_listview_detail.xml
+++ b/app/src/main/res/layout/news_listview_detail.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent" android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/messageTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="13dp"
+        android:layout_alignStart="@+id/authorTextView"
+        android:layout_marginTop="14dp"
         android:text="Message"
         android:textSize="24sp" />
 
@@ -20,7 +19,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="122dp"
+        android:layout_marginTop="92dp"
         android:text="By Chancellor of SCSE" />
 
     <TextView
@@ -32,4 +31,4 @@
         android:layout_marginEnd="133dp"
         android:text="Date" />
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
