--- a/app/src/main/res/layout/activity_update_news.xml
+++ b/app/src/main/res/layout/activity_update_news.xml
@@ -2,6 +2,7 @@
 <!-- Use DrawerLayout as root container for activity -->
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -33,17 +34,34 @@
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin">
 
+        <EditText
+            android:id="@+id/ContentTextView"
+            android:layout_width="348dp"
+            android:layout_height="214dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="101dp"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:selectAllOnFocus="false"
+            android:singleLine="false"
+            android:text="Message"
+            tools:text="Message" />
 
-        <ListView
-            android:id="@+id/BroadcastListView"
-            android:layout_width="368dp"
-            android:layout_height="551dp"
+        <Button
+            android:id="@+id/UpdateButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"
-            android:background="#f1f1f1" />
-
-
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="93dp"
+            android:onClick="BroadcastMessage"
+            android:text="Update" />
     </RelativeLayout>
 </android.support.v4.widget.DrawerLayout>
